...
                        Row(verticalAlignment = Alignment.CenterVertically) {
                            Button(
                                onClick = { if (isExpanded) selectedNoteIdForPane = "new" else onAddOrEditClick("new") },
                                modifier = Modifier
                                    .weight(1f)
                                    .height(36.dp)
                                    .testTag("AddNoteButton"),
                                contentPadding = PaddingValues(horizontal = 12.dp, vertical = 0.dp)
                            ) {
                                Text("+ Нотатка", style = MaterialTheme.typography.labelMedium)
                            }
                        }

...
